Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 
 
-@import url("/HoodAwards/indexCSS.css");
-@import url("/HoodAwards/Includes/main/feed_CSS.css");
+@import url("/indexCSS.css");
+@import url("/Includes/main/feed_CSS.css");
 
 
 
